tests/baselines/reference/decoratorOnClassConstructorParameter4.errors.txt
decoratorOnClassConstructorParameter4.ts(4,24): error TS1005: ',' expected.


==== decoratorOnClassConstructorParameter4.ts (1 errors) ====
    declare function dec(target: Function, propertyKey: string | symbol, parameterIndex: number): void;
    
    class C {
        constructor(public @dec p: number) {}
                           ~
!!! error TS1005: ',' expected.
    }